# PRISM

./: .gitignore  README.md  pyproject.toml  run.ps1
.github/workflows/: build-linux.yml  build.yml
Dataset/: METADATA.md  README.md
Dataset/Cascade/Cascade/: Cascade.kicad_pcb  Cascade.kicad_prl  Cascade.kicad_pro  Cascade.kicad_sch
Dataset/Connector/Connector/: Connector.kicad_pcb  Connector.kicad_prl  Connector.kicad_pro  Connector.kicad_sch
Dataset/Crossover/Crossover/: Crossover.kicad_pcb  Crossover.kicad_prl  Crossover.kicad_pro  Crossover.kicad_sch
Dataset/Divider/Divider/: Divider.kicad_pcb  Divider.kicad_prl  Divider.kicad_pro  Divider.kicad_sch
Dataset/Elements/Elements/: Elements.kicad_pcb  Elements.kicad_prl  Elements.kicad_pro  Elements.kicad_sch
Dataset/Filter/Filter/: Filter.kicad_pcb  Filter.kicad_prl  Filter.kicad_pro  Filter.kicad_sch
Dataset/Floating/Floating/: Floating.kicad_pcb  Floating.kicad_prl  Floating.kicad_pro  Floating.kicad_sch
Dataset/Groundplane/Groundplane/: Groundplane.kicad_pcb  Groundplane.kicad_prl  Groundplane.kicad_pro  Groundplane.kicad_sch
src/schematic_generator/: __init__.py  __main__.py  analysis.py  automatic.py  colors.py  component_solver.py  connection_graph_facade.py  contact_solver_facade.py  correction_editor_facade.py  corrections_facade.py  detection_facade.py  diagnostics_facade.py  evidence_dataset.py  geometry_facade.py  gui_facade.py  images.py  kicad_facade.py  mask_contacts.py  models.py  netlist_facade.py  ocr.py  platform_support.py  preview.py  resources.py  schematic_facade.py
(+106 files in other folders)
